ちょっとミスったのを修正

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@
 # 
 auto-save-mode/
 tramp/
-server/private/
+server/
+private/
+
 # ============================================================
 # 
 # Other files
