eshell/* を無視するように修正

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,10 @@
 # Ignore Directories
 # 
 auto-save-mode/
+eshell/
+private/
 tramp/
 server/
-private/
 
 # ============================================================
 # 
