--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@
 
 # ============================================================
 # 
+# Directory keep file
+# 
+
+!.gitkeep
+
+# ============================================================
+# 
 # Emacs template files
 # 
 *~
@@ -35,4 +42,14 @@ server/
 kkcrc
 *.dat
 
-!.gitkeep
+# ============================================================
+# 
+# Cask directory
+# 
+.cask/
+
+# ============================================================
+# 
+# Gasket directory
+#
+.gasket/
