update Emacs Lisp package

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 # 
 # Directory keep file
 # 
-
 !.gitkeep
 
 # ============================================================
@@ -42,6 +41,7 @@ server/
 kkcrc
 *.dat
 session.*
+.org-id-locations
 
 # ============================================================
 # 
