update geiser, flycheck, nim-mode

--- a/module-availables/geiser/geiser-install.el.in
+++ b/module-availables/geiser/geiser-install.el.in
@@ -1,5 +1,5 @@
 (require 'geiser)
 
-(setq geiser-scheme-dir "/usr/share/geiser")
+(setq geiser-scheme-dir "@SCHEME_DIR@")
 
 (provide 'geiser-install)
